--- a/.scribe/endpoints.cache/11.yaml
+++ b/.scribe/endpoints.cache/11.yaml
@@ -343,7 +343,7 @@ endpoints:
         name: is_internal
         description: ''
         required: false
-        example: false
+        example: true
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -351,7 +351,7 @@ endpoints:
         deprecated: false
     cleanBodyParameters:
       comment: b
-      is_internal: false
+      is_internal: true
     fileParameters: []
     responses: []
     responseFields: []
