--- a/.scribe/endpoints.cache/15.yaml
+++ b/.scribe/endpoints.cache/15.yaml
@@ -304,7 +304,7 @@ endpoints:
         name: is_recurring
         description: ''
         required: false
-        example: true
+        example: false
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -315,7 +315,7 @@ endpoints:
         name: is_active
         description: ''
         required: false
-        example: false
+        example: true
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -325,8 +325,8 @@ endpoints:
       name: b
       code: 'n'
       description: 'Animi quos velit et fugiat.'
-      is_recurring: true
-      is_active: false
+      is_recurring: false
+      is_active: true
     fileParameters: []
     responses: []
     responseFields: []
