--- a/.scribe/endpoints/01.yaml
+++ b/.scribe/endpoints/01.yaml
@@ -175,7 +175,7 @@ endpoints:
         name: grading_system_id
         description: 'The ID of the grading system.'
         required: true
-        example: b850ef0f-86e6-4bf6-8a1a-4049a034ae2b
+        example: 89dc0398-bc16-421a-9c26-b2a1fd12ede9
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -193,7 +193,7 @@ endpoints:
         nullable: false
         deprecated: false
     cleanUrlParameters:
-      grading_system_id: b850ef0f-86e6-4bf6-8a1a-4049a034ae2b
+      grading_system_id: 89dc0398-bc16-421a-9c26-b2a1fd12ede9
       grading_system: architecto
     queryParameters: []
     cleanQueryParameters: []
@@ -303,7 +303,7 @@ endpoints:
         name: 'grade_scales[].is_passing'
         description: ''
         required: true
-        example: true
+        example: false
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -597,7 +597,7 @@ endpoints:
         name: is_active
         description: ''
         required: false
-        example: false
+        example: true
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -697,7 +697,7 @@ endpoints:
         name: 'grade_scales[].is_passing'
         description: ''
         required: true
-        example: true
+        example: false
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -726,7 +726,7 @@ endpoints:
       min_subjects_to_pass: 6
       priority_subjects:
         - yvdljn
-      is_active: false
+      is_active: true
       grade_scales:
         - architecto
     fileParameters: []
@@ -762,7 +762,7 @@ endpoints:
         name: id
         description: 'The ID of the grading system.'
         required: true
-        example: b850ef0f-86e6-4bf6-8a1a-4049a034ae2b
+        example: 89dc0398-bc16-421a-9c26-b2a1fd12ede9
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -780,7 +780,7 @@ endpoints:
         nullable: false
         deprecated: false
     cleanUrlParameters:
-      id: b850ef0f-86e6-4bf6-8a1a-4049a034ae2b
+      id: 89dc0398-bc16-421a-9c26-b2a1fd12ede9
       grading_system: architecto
     queryParameters: []
     cleanQueryParameters: []
@@ -829,7 +829,7 @@ endpoints:
         name: id
         description: 'The ID of the grading system.'
         required: true
-        example: b850ef0f-86e6-4bf6-8a1a-4049a034ae2b
+        example: 89dc0398-bc16-421a-9c26-b2a1fd12ede9
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -847,7 +847,7 @@ endpoints:
         nullable: false
         deprecated: false
     cleanUrlParameters:
-      id: b850ef0f-86e6-4bf6-8a1a-4049a034ae2b
+      id: 89dc0398-bc16-421a-9c26-b2a1fd12ede9
       grading_system: architecto
     queryParameters: []
     cleanQueryParameters: []
