--- a/.scribe/endpoints/28.yaml
+++ b/.scribe/endpoints/28.yaml
@@ -137,7 +137,7 @@ endpoints:
         name: document_type
         description: ''
         required: true
-        example: other
+        example: medical_record
         type: string
         enumValues:
           - birth_certificate
@@ -148,7 +148,7 @@ endpoints:
         nullable: false
         deprecated: false
     cleanBodyParameters:
-      document_type: other
+      document_type: medical_record
     fileParameters:
       document: null
     responses: []
