--- a/.scribe/endpoints.cache/13.yaml
+++ b/.scribe/endpoints.cache/13.yaml
@@ -451,14 +451,14 @@ endpoints:
         name: async
         description: ''
         required: false
-        example: true
+        example: false
         type: boolean
         enumValues: []
         exampleWasSpecified: false
         nullable: false
         deprecated: false
     cleanBodyParameters:
-      async: true
+      async: false
     fileParameters: []
     responses: []
     responseFields: []
