--- a/.scribe/endpoints/09.yaml
+++ b/.scribe/endpoints/09.yaml
@@ -109,7 +109,7 @@ endpoints:
         name: relationship_type
         description: ''
         required: false
-        example: uncle
+        example: guardian
         type: string
         enumValues:
           - father
@@ -259,7 +259,7 @@ endpoints:
       first_name: b
       middle_name: 'n'
       last_name: g
-      relationship_type: uncle
+      relationship_type: guardian
       phone_primary: zmiyvdljnikhwayk
       phone_number: cmyuwpwlvqwrsitc
       phone_secondary: pscqldzsnrwtujwv
@@ -410,7 +410,7 @@ endpoints:
         name: relationship_type
         description: ''
         required: false
-        example: uncle
+        example: father
         type: string
         enumValues:
           - father
@@ -528,7 +528,7 @@ endpoints:
         name: is_active
         description: ''
         required: false
-        example: false
+        example: true
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -538,7 +538,7 @@ endpoints:
       first_name: b
       middle_name: 'n'
       last_name: g
-      relationship_type: uncle
+      relationship_type: father
       phone_primary: zmiyvdljnikhwayk
       phone_number: cmyuwpwlvqwrsitc
       phone_secondary: pscqldzsnrwtujwv
@@ -548,7 +548,7 @@ endpoints:
       employer: 'n'
       address: t
       national_id: l
-      is_active: false
+      is_active: true
     fileParameters: []
     responses: []
     responseFields: []
