--- a/.scribe/endpoints/19.yaml
+++ b/.scribe/endpoints/19.yaml
@@ -87,7 +87,7 @@ endpoints:
         name: start_time
         description: 'Must be a valid date in the format <code>H:i</code>.'
         required: true
-        example: '05:56'
+        example: '08:30'
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -109,7 +109,7 @@ endpoints:
         name: type
         description: ''
         required: false
-        example: assembly
+        example: break
         type: string
         enumValues:
           - lesson
@@ -144,9 +144,9 @@ endpoints:
         deprecated: false
     cleanBodyParameters:
       name: b
-      start_time: '05:56'
+      start_time: '08:30'
       end_time: '2052-01-26'
-      type: assembly
+      type: break
       sort_order: 39
       is_active: false
     fileParameters: []
@@ -265,7 +265,7 @@ endpoints:
         name: start_time
         description: 'Must be a valid date in the format <code>H:i</code>.'
         required: true
-        example: '05:56'
+        example: '08:30'
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -314,7 +314,7 @@ endpoints:
         name: is_active
         description: ''
         required: false
-        example: true
+        example: false
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -322,11 +322,11 @@ endpoints:
         deprecated: false
     cleanBodyParameters:
       name: b
-      start_time: '05:56'
+      start_time: '08:30'
       end_time: '2052-01-26'
       type: assembly
       sort_order: 39
-      is_active: true
+      is_active: false
     fileParameters: []
     responses: []
     responseFields: []
