--- a/.scribe/endpoints/23.yaml
+++ b/.scribe/endpoints/23.yaml
@@ -285,7 +285,7 @@ endpoints:
         name: type
         description: ''
         required: true
-        example: in_app
+        example: push
         type: string
         enumValues:
           - sms
@@ -333,7 +333,7 @@ endpoints:
         name: is_active
         description: ''
         required: false
-        example: true
+        example: false
         type: boolean
         enumValues: []
         exampleWasSpecified: false
@@ -342,10 +342,10 @@ endpoints:
     cleanBodyParameters:
       name: b
       code: 'n'
-      type: in_app
+      type: push
       subject: g
       body: z
-      is_active: true
+      is_active: false
     fileParameters: []
     responses: []
     responseFields: []
@@ -439,7 +439,7 @@ endpoints:
         name: type
         description: 'This field is required when <code>template_id</code> is not present.'
         required: false
-        example: push
+        example: sms
         type: string
         enumValues:
           - sms
@@ -499,7 +499,7 @@ endpoints:
         name: 'recipients[].type'
         description: ''
         required: true
-        example: student
+        example: guardian
         type: string
         enumValues:
           - user
@@ -521,12 +521,12 @@ endpoints:
         deprecated: false
     cleanBodyParameters:
       template_id: 6ff8f7f6-1eb3-3525-be4a-3932c805afed
-      type: push
+      type: sms
       subject: g
       body: z
       recipients:
         -
-          type: student
+          type: guardian
           id: 6ff8f7f6-1eb3-3525-be4a-3932c805afed
     fileParameters: []
     responses: []
