--- a/.scribe/endpoints/27.yaml
+++ b/.scribe/endpoints/27.yaml
@@ -110,7 +110,7 @@ endpoints:
         name: 'students[].gender'
         description: 'This field is required when <code>students</code> is present.'
         required: false
-        example: male
+        example: female
         type: string
         enumValues:
           - male
@@ -123,7 +123,7 @@ endpoints:
         name: 'students[].date_of_birth'
         description: 'Must be a valid date.'
         required: false
-        example: '2026-01-02T05:56:43'
+        example: '2026-01-02T08:30:15'
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -148,8 +148,8 @@ endpoints:
         -
           first_name: 'y'
           last_name: v
-          gender: male
-          date_of_birth: '2026-01-02T05:56:43'
+          gender: female
+          date_of_birth: '2026-01-02T08:30:15'
           admission_number: d
     fileParameters:
       file: null
