--- a/.scribe/endpoints/30.yaml
+++ b/.scribe/endpoints/30.yaml
@@ -278,7 +278,7 @@ endpoints:
         name: model
         description: ''
         required: true
-        example: payment
+        example: student
         type: string
         enumValues:
           - student
@@ -300,7 +300,7 @@ endpoints:
         nullable: false
         deprecated: false
     cleanBodyParameters:
-      model: payment
+      model: student
       id: 6ff8f7f6-1eb3-3525-be4a-3932c805afed
     fileParameters: []
     responses:
